# alicerce

./: .gitignore  Makefile  README.md  pyproject.toml  settings.toml  wsgi.py
alicerce/: __init__.py
alicerce/alicerce_api/api/: __init__.py  exceptions.py
alicerce/alicerce_api/api/auth/: business.py  decorators.py  dto.py  endpoints.py
alicerce/alicerce_api/models/: token_revokedlist.py  user.py
alicerce/bot/: iqa.py  qa.py
alicerce/ext/: admin.py  appearance.py  commands.py  config.py  limiter.py  login.py  manage.py  migrate.py
alicerce/static/css/: style.css  typing.css
alicerce/static/js/: main.js
alicerce/templates/: baseof.html  chatbot.html  index.html  login.html
alicerce/templates/partials/: footer.html  head.html  navbar.html  script.html
alicerce/webpage/: __init__.py  business.py  views.py
tests/: test_alicerce.py
